--- a/client/templates/base/footer.html
+++ b/client/templates/base/footer.html
@@ -1,5 +1,4 @@
-<template name="myFooter">
+<template name="footer">
 <hr>
 <p>&copy; 2015</p>
-<p>Please send any and all feedback to <a href="mailto:techieyann@gmail.com" target="_blank">Ian</a></p>
 </template>
