--- a/client/templates/base/navbar.html
+++ b/client/templates/base/navbar.html
@@ -1,22 +1,22 @@
-<template name="myNavbar">
-	<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-			<a class="navbar-brand" href="{{pathFor route='welcome'}}">t <span class="glyphicon glyphicon-check"></span></a>
-    </div>
+<template name="navbar">
+	<nav>
+		<div class="nav-wrapper">
+			<a href="{{pathFor route='index'}}" class="brand-logo">Taskurbate</a>
+			<a href="#" class="button-collapse right" data-activates="mobile-side-nav"><i class="mdi-navigation-menu"></i></a>
+			<ul class="right hide-on-med-and-down">
+				<li><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
+				{{#if currentUser}}
+				<li><a href="#" class="logout">Logout<i class="mdi-action-exit-to-app right"></i></a></li>
+				{{/if}}
+			</ul>
 
-    <div id="navbar" class="navbar-collapse collapse">
+			<ul class="side-nav" id="mobile-side-nav">
+				<li><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
+				{{#if currentUser}}
+				<li><a href="#" class="logout">Logout<i class="mdi-action-exit-to-app right"></i></a></li>
+				{{/if}}
+			</ul>
 
-      <ul class="nav navbar-nav navbar-right">
-				<li class="text-right login-li">{{>loginButtons}}</li>
-      </ul>
-    </div><!--/.nav-collapse -->
-  </div><!--/.container-fluid -->
+		</div><!--/.nav-wrapper -->
 	</nav>
 </template>
