--- a/client/styles/taskurbate.css
+++ b/client/styles/taskurbate.css
@@ -1,3 +1,15 @@
+.modal-content{
+		padding-bottom:20px;
+}
+
+.label{
+		color:#9e9e9e;
+}
+
+.centered{
+		text-align:center;
+}
+
 footer{
 		text-align:center;
 }
