navbar active links

--- a/client/templates/landingPage.html
+++ b/client/templates/landingPage.html
@@ -1,3 +1,7 @@
-<template name="landingPage">
-	<p>The eagle has landed, over.</p>
+<template name="welcomeMessage">
+	<h4>Welcome to Taskurbate!</h4>
+	<div class="row">
+		<div class="col s12 m6">First, add a <a href="{{pathFor 'tags'}}">tag</a> or two so you can organize your tasks.</div>
+		<div class="col s12 m6">Add new tasks by pressing the big red button in the lower right.</div>
+	</div>
 </template>
