--- a/client/templates/modals/newTaskModal.html
+++ b/client/templates/modals/newTaskModal.html
@@ -9,34 +9,43 @@
 				<select id="tag" {{disabledWithoutTags}}>
 					<option value="misc" selected>Misc.</option>
 					{{#each tag}}
-					<option value="{{name}}">{{name}}</option>
+					<option value="{{_id}}">{{name}}</option>
 					{{/each}}
 				</select>
 				<label>Tag as:</label>
 			</div>
 		</div>
 		<div class="row">
-			<div class="input-field col s12">
-				<textarea id="description" class="materialize-textarea"></textarea>
-				<label for="description">Description</label>
+			<div class="input-field col s12 m6 l4">
+				<p class="label">Scheduling:</p>
+				<input name="type" type="radio" id="adaptive" checked>
+				<label for="adaptive">Adaptive</label>
+				<br><br>
+				<input name="type" type="radio" id="strict">
+				<label for="strict">Strict</label>
+			</div>
+			<div class="col s12 m6 l8">
+				<br>
+				<div id="adaptive-scheduling-explanation">
+					<br><br>
+					<p class="label">Due date will adapt based on how frequently it is completed.</p>
+				</div>
+				<div id="strict-inputs">
+					<div class="input-field">
+					<label for="days-before-due">Due every (days):</label>
+					<input id="days-before-due" type="number" min="1">
+					</div>
+					<div class="input-field">
+					<label for="due-starting">Starting:</label>
+					<input id="due-starting" type="text">
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="row">
-			<p class="label">Scheduling:</p>
-			<div class="input-field col s12 m6 l8">
-				<div id="adaptive-scheduling-explanation">
-					<p class="label">Taskurbate will adapt the task's due date depending on how frequently it is completed.</p>
-				</div>
-				<div id="days-before-due-input">
-					<p><label id="days-before-due-label" for="days-before-due">Due every:</label>
-						<input id="days-before-due" type="number" min="1"><span class="label right">Day(s)</span></p>
-				</div>
-			</div>
-			<div class="input-field col s12 m6 l4">
-				<p><input name="type" type="radio" id="strict">
-					<label for="strict">Strict</label></p>
-				<p><input name="type" type="radio" id="adaptive" checked>
-					<label for="adaptive">Adaptive</label></p>
+			<div class="input-field col s12">
+				<textarea id="description" class="materialize-textarea"></textarea>
+				<label for="description">Description</label>
 			</div>
 		</div>
 	</form>
