--- a/client/templates/tags.html
+++ b/client/templates/tags.html
@@ -1,3 +1,44 @@
 <template name="tags">
-	tags tags tags
+		<form id="new-tag-form">
+			<div class="row">
+				<div class="input-field col s10">
+					<i class="mdi-action-label-outline prefix"></i> 
+					<input id="new-tag" type="text">
+					<label for="new-tag">New tag</label>
+				</div>
+				<span class="col s2">
+					<a href="#" class="create-tag btn-large btn-floating red right"><i class="mdi-content-add"></i></a>
+				</span>
+			</div>
+		</form>
+	<ul id="tag-collection" class="collection with-header">
+		<li class="collection-header"><h4><i class="mdi-image-style left"></i>Tags:</h4></li>
+		{{#each tag}}
+		<li id="{{_id}}-display" class="collection-item">
+			<div>
+				<span class="tag"><i class="mdi-action-label-outline left"></i> {{name}}</span>
+				<span class="secondary-content">
+					<a href="#" class="edit-tag"><i class="mdi-content-create"></i></a>
+					<a href="#" class="delete-tag"><i class="mdi-action-highlight-remove"></i></a>
+				</span>
+			</div>
+		</li>
+		<li id="{{_id}}-edit" class="collection-item hidden">
+			<div>
+				<form class="edit-tag-form">
+					<div class="row">
+						<div class="input-field col s10 m11">
+							<i class="mdi-action-label-outline prefix"></i> 
+							<input id="edit-tag-{{_id}}" type="text" value="{{name}}">
+							<label class="active" for="edit-tag-{{_id}}">Tag Name</label>
+						</div>
+						<span class="col s2 m1">
+							<a href="#" class="submit-edit-tag-form right"><i class="mdi-content-create"></i></a>
+						</span>
+					</div>
+				</form>
+			</div>
+		</li>
+		{{/each}}
+	</ul>
 </template>
