--- a/client/templates/landingPage.html
+++ b/client/templates/landingPage.html
@@ -1,7 +1,7 @@
 <template name="welcomeMessage">
 	<h4>Welcome to Taskurbate!</h4>
 	<div class="row">
-		{{#unless tag}}
+		{{#unless anyTags}}
 		<div class="col s12 m6">First, add a <a href="{{pathFor 'tags'}}">tag</a> or two so you can organize your tasks.</div>
 		{{/unless}}
 		<div class="col s12 m6">Add new tasks by pressing the big red button in the lower right.</div>
