--- a/client/templates/tags.html
+++ b/client/templates/tags.html
@@ -33,7 +33,7 @@
 				<a href="#" class="edit-tag"><i class="mdi-content-create small"></i></a>
 			</div>
 			<div class="col s1">
-				<a href="#" class="delete-tag"><i class="mdi-action-highlight-remove small"></i></a>
+				<a href="#" class="delete-tag"><i class="mdi-action-delete small"></i></a>
 			</div>
 		</div>
 	</li>
