--- a/client/templates/modals/newTaskModal.html
+++ b/client/templates/modals/newTaskModal.html
@@ -21,22 +21,26 @@
 				<input name="taskScheduleType" type="radio" id="adaptive" value="adaptive" checked>
 				<label for="adaptive">Adaptive</label>
 				<br><br>
+				<input name="taskScheduleType" type="radio" id="hybrid" value="hybrid">
+				<label for="hybrid">Hybrid</label>
+				<br><br>
 				<input name="taskScheduleType" type="radio" id="strict" value="strict">
 				<label for="strict">Strict</label>
 			</div>
 			<div class="col s12 m6 l8">
 				<br>
-				<div id="adaptive-scheduling-explanation">
-					<br><br>
-					<p class="label">Due date will adapt based on how frequently it is completed.</p>
+				<div id="schedule-explanations">
+					<p id="adaptive-explanation" class="label">Due date will adapt based on how frequently it is completed.</p>
+					<p id="hybrid-explanation" class="label hidden">Due date will always be the set number of days after it was last completed.</p>
+					<p id="strict-explanation" class="label hidden">Due date will always be the set number of days after last due.</p>
 				</div>
-				<div id="strict-inputs">
-					<div class="input-field">
+				<div id="schedule-inputs">
+					<div id="due-every" class="input-field hidden">
 					<label for="days-before-due">Due every (days):</label>
 					<input id="days-before-due" name="taskDaysBeforeDue" type="number" min="1">
 					</div>
-					<div class="input-field">
-					<label for="due-starting">Starting:</label>
+					<div id="starting-on" class="input-field hidden">
+					<label for="due-starting">Due on:</label>
 					<input id="due-starting" name="taskDueStarting" type="text">
 					</div>
 				</div>
