--- a/client/templates/tasks/tasks.html
+++ b/client/templates/tasks/tasks.html
@@ -2,7 +2,13 @@
 	{{#if anyTasks}}
 	<ul id="task-collection" class="collection with-header">
 
-		<li class="collection-header"><h4><i class="mdi-action-assignment left"></i>Tasks:</h4></li>
+		<li class="collection-header">
+			<h4>
+				<i class="mdi-action-assignment left"></i>
+				Tasks: 
+				<a href="#" class="filter-tasks black-text"><i class="mdi-content-filter-list right"></i></a>
+			</h4>
+		</li>
 
 		{{#each task}}
 		{{> taskCollectionElement}}
@@ -18,25 +24,26 @@
 
 	<li class="collection-item">		
 		<div class="row">
-			<div class="col s9 m11">
+			<div class="col s10 m11">
 				<span class="task">
 					<a href="#" id="{{_id}}-expand" class="expand left black-text"><i class="mdi-navigation-expand-more small"></i></a>
 					<a href="#" id="{{_id}}-shrink" class="shrink left black-text hidden"><i class="mdi-navigation-expand-less small"></i></a>
-					{{name}} ({{tagByID}})
+					<a href="#" class="task-description black-text">{{name}} <i class="mdi-action-launch"></i></a>
 				</span>
 			</div>
 			<div class="col s1">
+				{{#if completedToday}}
+				<a href="#" class="task-complete black-text"><i class="mdi-action-assignment-turned-in small"></i></a>
+				{{else}}
 				<a href="#" class="task-complete black-text"><i class="mdi-action-done small"></i></a>
+				{{/if}}
 			</div>
 		</div>
 		<div id="{{_id}}-modify" class="row hidden centered black-text">
-			<div class="col s4">
-				<a href="#" class="task-description black-text"><i class="mdi-action-description small"></i></a>
-			</div>
-			<div class="col s4">
+			<div class="col s6">
 				<a href="#" class="edit-task black-text"><i class="mdi-content-create small"></i></a>
 			</div>
-			<div class="col s4">
+			<div class="col s6">
 				<a href="#" class="delete-task black-text"><i class="mdi-action-delete small"></i></a>
 			</div>
 		</div>
