task metadata init, backdating init

--- a/client/templates/modals/newTaskModal.html
+++ b/client/templates/modals/newTaskModal.html
@@ -41,7 +41,7 @@
 					</div>
 					<div id="starting-on" class="input-field hidden">
 					<label for="due-starting">Due on:</label>
-					<input id="due-starting" name="taskDueStarting" type="text">
+					<input id="due-starting" name="taskDueStarting" type="text" readonly="true">
 					</div>
 				</div>
 			</div>
