--- a/client/templates/tasks/tasks.html
+++ b/client/templates/tasks/tasks.html
@@ -40,11 +40,14 @@
 			</div>
 		</div>
 		<div id="{{_id}}-modify" class="row hidden centered black-text">
-			<div class="col s6">
+			<div class="col s4">
 				<a href="#" class="edit-task black-text"><i class="mdi-content-create small"></i></a>
 			</div>
-			<div class="col s6">
+			<div class="col s4">
 				<a href="#" class="delete-task black-text"><i class="mdi-action-delete small"></i></a>
+			</div>
+			<div class="col s4">
+				<a href="#" class="backdate-task black-text"><i class="mdi-action-event small"></i></a>
 			</div>
 		</div>
 	</li>
