--- a/client/styles/taskurbate.css
+++ b/client/styles/taskurbate.css
@@ -17,6 +17,9 @@ li>.row{
 		margin-bottom: 0px;
 }
 
+#backdate-datepicker{
+		display: inline-block;
+}
 /*tags*/
 #new-tag-form{
 		margin: 20px 0px -20px 0px;
