--- a/client/templates/modals/editTaskModal.html
+++ b/client/templates/modals/editTaskModal.html
@@ -41,7 +41,7 @@
 					</div>
 					<div id="starting-on" class="input-field">
 					<label for="due-starting" class="active">Due on:</label>
-					<input id="due-starting" name="taskDueStarting" type="text" value="{{dueNext}}">
+					<input id="due-starting" name="taskDueStarting" type="text" readonly="true" value="{{dueNext}}">
 					</div>
 				</div>
 			</div>
