--- a/client/templates/tasks/tasks.html
+++ b/client/templates/tasks/tasks.html
@@ -33,9 +33,9 @@
 			</div>
 			<div class="col s1">
 				{{#if completedToday}}
-				<a href="#" class="task-complete black-text"><i class="mdi-action-assignment-turned-in small"></i></a>
+				<a href="#" class="task-complete {{dueColor}}-text"><i class="mdi-action-assignment-turned-in small"></i></a>
 				{{else}}
-				<a href="#" class="task-complete black-text"><i class="mdi-action-done small"></i></a>
+				<a href="#" class="task-complete {{dueColor}}-text"><i class="mdi-action-done small"></i></a>
 				{{/if}}
 			</div>
 		</div>
