--- a/client/templates/modals/taskMetaModal.html
+++ b/client/templates/modals/taskMetaModal.html
@@ -15,23 +15,41 @@
 			<p><strong>Schedule:</strong> {{schedule}}</p>
 		</div>
 	</div>
-	{{#if lastCompleted}}
-	<ul class="collection with-header">
-		<li class="collection-header"><strong>Completed:</strong></li>
-		{{#each completed}}
-		<li class="collection-item">
-			<i class="mdi-action-event"></i>
-			{{completedOn}}
-			{{#if completedAt}}
-			<i class="mdi-device-access-time"></i>
-			{{completedAt}}
-			{{/if}}
-			<a href="#" class="remove-completed black-text right"><i class="mdi-content-clear"></i></a>
-		</li>
-		{{/each}}
-	</ul>
-	{{/if}}
+	<div class="row" id="completed-row">
+		{{#if completedTaskSelected}}
+		<ul  class="collection">
+			<li class="collection-item">
+				<div class="row">
 
+					<div class="centered">
+						<div class="left">
+							<a href="#" class="remove-completed black-text"><i class="mdi-action-delete"></i></a>
+						</div>
+						<i class="mdi-action-event"></i>
+						{{completedOn}}
+						{{#if completedAt}}
+						<i class="mdi-device-access-time"></i>
+						{{completedAt}}
+						{{/if}}
+						<div class="right">
+							<a href="#" class="deselect-completed black-text"><i class="mdi-action-highlight-remove"></i></a>
+						</div>
+					</div>
+
+				</div>
+			</li>
+		</ul>
+		{{/if}}
+		<div class="col s12">
+			<a href="#" class="hide-calendar btn-flat waves-effect waves-teal left"><i class="mdi-hardware-keyboard-arrow-up left"></i>Completed<i class="mdi-action-event right"></i></a>
+			<a href="#" class="show-calendar btn-flat waves-effect waves-teal left"><i class="mdi-hardware-keyboard-arrow-down left"></i>Completed<i class="mdi-action-event right"></i></a>
+		</div>
+	</div>
+	<div id="task-calendar">
+
+		{{> calendarArrows}}
+		{{> ReactiveFullcalendar options=calendarOptions}}
+	</div>
 </template>
 
 <template name="taskMetaModalFooter">
