--- a/client/templates/modals/editTaskModal.html
+++ b/client/templates/modals/editTaskModal.html
@@ -1,11 +1,15 @@
 <template name="editTaskModalBody">
 	<form class="edit-task-form">
 		<div class="row">
-			<div class="input-field col s12 m6">
+			<div class="input-field col s12 m6 l4">
 				<input placeholder="Name of new task" name="taskName" id="name" type="text" value="{{name}}">
 				<label class="active" for="name">Name</label>
 			</div>
-			<div class="input-field col s12 m6">
+			<div class="input-field col s12 m3 l4">
+				<input id="duration" name="taskDuration" type="number" value="{{duration}}">
+				<label for="duration" class="active">Duration (mins)</label>
+			</div>
+			<div class="input-field col s12 m3 l4">
 				<select id="tag" name="taskTag" {{disabledWithoutTags}}>
 					<option value="0" {{selectedTag 0}}>Misc.</option>
 					{{#each tag}}
@@ -17,15 +21,19 @@
 		</div>
 		<div class="row">
 			<div class="input-field col s12 m6 l4">
-				<p class="label">Scheduling:</p>
+
+				<p class="col s12">Scheduling:</p>
+
+
 				<input name="taskScheduleType" type="radio" id="adaptive" value="adaptive" {{checkedSchedule 'adaptive'}}>
 				<label for="adaptive">Adaptive</label>
-				<br><br>
+				<br>
 				<input name="taskScheduleType" type="radio" id="hybrid" value="hybrid"  {{checkedSchedule 'hybrid'}}>
 				<label for="hybrid">Hybrid</label>
-				<br><br>
+				<br>
 				<input name="taskScheduleType" type="radio" id="strict" value="strict"  {{checkedSchedule 'strict'}}>
 				<label for="strict">Strict</label>
+				<br>
 			</div>
 			<div class="col s12 m6 l8">
 				<br>
