--- a/client/templates/modals/newTaskModal.html
+++ b/client/templates/modals/newTaskModal.html
@@ -1,11 +1,15 @@
 <template name="newTaskModalBody">
 	<form class="new-task-form">
 		<div class="row">
-			<div class="input-field col s12 m6">
-				<input placeholder="Name of new task" name="taskName" id="name" type="text">
+			<div class="input-field col s12 m6 l4">
+				<input placeholder="Name of new task" name="taskName" id="name" type="text" required>
 				<label for="name">Name</label>
 			</div>
-			<div class="input-field col s12 m6">
+			<div class="input-field col s12 m3 l4">
+				<input id="duration" name="taskDuration" type="number" value="30">
+				<label for="duration" class="active">Duration (mins)</label>
+			</div>
+			<div class="input-field col s12 m3 l4">
 				<select id="tag" name="taskTag" {{disabledWithoutTags}}>
 					<option value="0" selected>Misc.</option>
 					{{#each tag}}
