tag listing in task modal

--- a/client/templates/modals/taskMetaModal.html
+++ b/client/templates/modals/taskMetaModal.html
@@ -1,5 +1,5 @@
 <template name="taskMetaModalBody">
-	<h4 class="centered"><strong>{{name}}</strong></h4>
+	<h4 class="centered"><strong>{{name}}</strong> ({{tagById}})</h4>
 	<div class="row">
 		{{#if description}}
 		<div class="col s12 m6">
