--- a/client/templates/base/navbar.html
+++ b/client/templates/base/navbar.html
@@ -4,22 +4,32 @@
 			<a href="{{pathFor route='index'}}" class="brand-logo">Taskurbate</a>
 			<a href="#" class="button-collapse right" data-activates="mobile-side-nav"><i class="mdi-navigation-menu"></i></a>
 			<ul class="right hide-on-med-and-down">
-				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
+
+
 				{{#if currentUser}}
-				<li class="{{activeRoute 'groups'}}"><a href="{{pathFor 'groups'}}">Groups<i class="mdi-social-group right"></i></a></li>
+				<li class="{{activeRoute 'index'}}"><a href="{{pathFor route='index'}}">Home<i class="mdi-action-home right"></i></a></li>
 				<li class="{{activeRoute 'tasks'}}"><a href="{{pathFor 'tasks'}}">Tasks<i class="mdi-action-assignment right"></i></a></li>
 				<li class="{{activeRoute 'tags'}}"><a href="{{pathFor 'tags'}}">Tags<i class="mdi-image-style right"></i></a></li>
+				<li class="{{activeRoute 'groups'}}"><a href="{{pathFor 'groups'}}">Groups<i class="mdi-social-group right"></i></a></li>
+				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
 				<li><a href="#" class="logout">Logout<i class="mdi-action-exit-to-app right"></i></a></li>
+				{{else}}
+				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
+				<li class="{{activeRoute 'login'}}"><a href="{{pathFor route='login'}}">Login<i class="mdi-action-input right"></i></a></li>
 				{{/if}}
 			</ul>
 
 			<ul class="side-nav" id="mobile-side-nav">
-				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
 				{{#if currentUser}}
-				<li class="{{activeRoute 'groups'}}"><a href="{{pathFor 'groups'}}">Groups<i class="mdi-social-group right"></i></a></li>
+				<li class="{{activeRoute 'index'}}"><a href="{{pathFor route='index'}}">Home<i class="mdi-action-home right"></i></a></li>
 				<li class="{{activeRoute 'tasks'}}"><a href="{{pathFor 'tasks'}}">Tasks<i class="mdi-action-assignment right"></i></a></li>
 				<li class="{{activeRoute 'tags'}}"><a href="{{pathFor 'tags'}}">Tags<i class="mdi-image-style right"></i></a></li>
+				<li class="{{activeRoute 'groups'}}"><a href="{{pathFor 'groups'}}">Groups<i class="mdi-social-group right"></i></a></li>
+				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
 				<li><a href="#" class="logout">Logout<i class="mdi-action-exit-to-app right"></i></a></li>
+				{{else}}
+				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
+				<li class="{{activeRoute 'login'}}"><a href="{{pathFor route='login'}}">Login<i class="mdi-action-input right"></i></a></li>
 				{{/if}}
 			</ul>
 
