--- a/client/templates/base/navbar.html
+++ b/client/templates/base/navbar.html
@@ -11,6 +11,7 @@
 				<li class="{{activeRoute 'tasks'}}"><a href="{{pathFor 'tasks'}}">Tasks<i class="mdi-action-assignment right"></i></a></li>
 				<li class="{{activeRoute 'tags'}}"><a href="{{pathFor 'tags'}}">Tags<i class="mdi-image-style right"></i></a></li>
 				<li class="{{activeRoute 'groups'}}"><a href="{{pathFor 'groups'}}">Groups<i class="mdi-social-group right"></i></a></li>
+				<li class="{{activeRoute 'settings'}}"><a href="{{pathFor route='settings'}}">Settings<i class="mdi-action-settings right"></i></a></li>
 				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
 				<li><a href="#" class="logout">Logout<i class="mdi-action-exit-to-app right"></i></a></li>
 				{{else}}
@@ -25,6 +26,7 @@
 				<li class="{{activeRoute 'tasks'}}"><a href="{{pathFor 'tasks'}}">Tasks<i class="mdi-action-assignment right"></i></a></li>
 				<li class="{{activeRoute 'tags'}}"><a href="{{pathFor 'tags'}}">Tags<i class="mdi-image-style right"></i></a></li>
 				<li class="{{activeRoute 'groups'}}"><a href="{{pathFor 'groups'}}">Groups<i class="mdi-social-group right"></i></a></li>
+				<li class="{{activeRoute 'settings'}}"><a href="{{pathFor route='settings'}}">Settings<i class="mdi-action-settings right"></i></a></li>
 				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
 				<li><a href="#" class="logout">Logout<i class="mdi-action-exit-to-app right"></i></a></li>
 				{{else}}
