--- a/client/templates/landingPage.html
+++ b/client/templates/landingPage.html
@@ -3,7 +3,7 @@
 	<div class="row">
 		{{#unless anyTags}}
 		<div class="col s12 m6">
-			First, add a <a href="{{pathFor 'tags'}}">tag</a> or two so you can organize your tasks.
+			First, add a <a href="{{pathFor 'settings'}}">tag</a> or two so you can organize your tasks.
 		</div>
 		{{/unless}}
 		{{#unless anyCompleted}}
