--- a/client/templates/base/navbar.html
+++ b/client/templates/base/navbar.html
@@ -1,5 +1,5 @@
 <template name="navbar">
-	<nav>
+	<nav class="indigo lighten-2">
 		<div class="nav-wrapper">
 			<a href="{{pathFor route='index'}}" class="brand-logo">Taskurbate</a>
 			<a href="#" class="button-collapse right" data-activates="mobile-side-nav"><i class="mdi-navigation-menu"></i></a>
@@ -8,9 +8,7 @@
 
 				{{#if currentUser}}
 				<li class="{{activeRoute 'index'}}"><a href="{{pathFor route='index'}}">Home<i class="mdi-action-home right"></i></a></li>
-				<li class="{{activeRoute 'tasks'}}"><a href="{{pathFor 'tasks'}}">Tasks<i class="mdi-action-assignment right"></i></a></li>
-				<li class="{{activeRoute 'tags'}}"><a href="{{pathFor 'tags'}}">Tags<i class="mdi-image-style right"></i></a></li>
-				<li class="{{activeRoute 'groups'}}"><a href="{{pathFor 'groups'}}">Groups<i class="mdi-social-group right"></i></a></li>
+				<li class="{{activeRoute 'tasks'}}{{activeRoute 'task'}}"><a href="{{pathFor 'tasks'}}">Tasks<i class="mdi-action-assignment right"></i></a></li>
 				<li class="{{activeRoute 'settings'}}"><a href="{{pathFor route='settings'}}">Settings<i class="mdi-action-settings right"></i></a></li>
 				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
 				<li><a href="#" class="logout">Logout<i class="mdi-action-exit-to-app right"></i></a></li>
@@ -23,9 +21,7 @@
 			<ul class="side-nav" id="mobile-side-nav">
 				{{#if currentUser}}
 				<li class="{{activeRoute 'index'}}"><a href="{{pathFor route='index'}}">Home<i class="mdi-action-home right"></i></a></li>
-				<li class="{{activeRoute 'tasks'}}"><a href="{{pathFor 'tasks'}}">Tasks<i class="mdi-action-assignment right"></i></a></li>
-				<li class="{{activeRoute 'tags'}}"><a href="{{pathFor 'tags'}}">Tags<i class="mdi-image-style right"></i></a></li>
-				<li class="{{activeRoute 'groups'}}"><a href="{{pathFor 'groups'}}">Groups<i class="mdi-social-group right"></i></a></li>
+				<li class="{{activeRoute 'tasks'}}{{activeRoute 'task'}}"><a href="{{pathFor 'tasks'}}">Tasks<i class="mdi-action-assignment right"></i></a></li>
 				<li class="{{activeRoute 'settings'}}"><a href="{{pathFor route='settings'}}">Settings<i class="mdi-action-settings right"></i></a></li>
 				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
 				<li><a href="#" class="logout">Logout<i class="mdi-action-exit-to-app right"></i></a></li>
