--- a/client/templates/groups.html
+++ b/client/templates/groups.html
@@ -1,27 +1,20 @@
 <template name="groups">
 	{{#if hasNickname}}
+	{{> groupJoinCreate}}
 	{{#if anyGroups}}
 	{{> groupList}}
 	{{/if}}
-	<br>
-	{{> groupCRUD}}
+
 	{{else}}
-	<p>Please set a nickname before joining/creating any groups:</p>
-	{{> nicknameForm}}
+	<p>Please set a nickname before joining/creating any groups.</p>
 	{{/if}}
 </template>
 
 <template name="groupList">
 
-	<ul id="task-collection" class="collection with-header">
-		<li class="collection-header">
-			<h4>
-				<i class="mdi-social-group left"></i>
-				Groups: 
-			</h4>
-		</li>
+	<ul id="task-collection" class="collection">
 		{{#each group}}
-		<li>
+		<li class="collection-item">
 			<a href="#" class="group-description black-text">{{name}} <i class="mdi-action-launch"></i></a>
 			<a href="#" class="edit-group black-text right"><i class="mdi-content-create small"></i></a>
 		</li>
@@ -31,23 +24,28 @@
 
 </template>
 
-<template name="groupCRUD">
-
+<template name="groupJoinCreate">
 	<div class="row">
-		<div class="col s12 m6">
-			<strong>Create a group:</strong> <button id="new-group" class="btn right">New Group</button>
-		</div>
-		<div class="col s12 m6">
-			<strong>Join a group:</strong>
+		<form id="group-form">
 			<div class="input-field">
-				<input id="group-name" type="text">
+				<input id="group-name" name="groupName" type="text">
 				<label for="group-name">Group name</label>
 			</div>
 			<div class="input-field">
-				<input id="group-pass" type="password">
+				<input id="group-pass" name="groupPass" type="password">
 				<label for="group-pass">Password</label>
 			</div>
-			<button id="join-group" class="btn right">Join Group</button>
+			<div id="confirm-password" class="input-field hidden">
+				<input id="group-pass-confirm" name="groupPassConfirm" type="password">
+				<label for="group-pass-pass-configm">Confirm password</label>
+			</div>
+		</form>
+
+		<div id="join-control" class="right">
+			<button id="join-group" class="btn">Join</button> <a href="#" id="swap-to-create">or create.</a>
+		</div>
+		<div id="create-control" class="right hidden">
+			<button id="create-group" class="btn">Create</button> <a href="#" id="swap-to-join">or join.</a>
 		</div>
 	</div>
 </template>
