--- a/client/templates/nickname.html
+++ b/client/templates/nickname.html
@@ -1,6 +1,6 @@
 <template name="nicknameForm">
 	<div class="row">
-		<div class="col s12 m10">
+		<div class="col s10">
 			<form id="nickname-form">
 				<div class="input-field">
 					<input id="nickname" type="text" value="{{nickname}}">
@@ -8,8 +8,8 @@
 				</div>
 			</form>
 		</div>
-		<div class="col s12 m2">
-			<button id="submit-nickname" class="btn right">Set</button>
+		<div class="col s2">
+			<button id="submit-nickname" class="btn-floating btn-large right">Set</button>
 		</div>
 	</div>
 </template>
