--- a/client/templates/tags.html
+++ b/client/templates/tags.html
@@ -7,15 +7,12 @@
 				<label for="new-tag">New tag</label>
 			</div>
 			<span class="col s2">
-				<a href="#" class="create-tag btn-large btn-floating red right"><i class="mdi-content-add"></i></a>
+				<a href="#" class="create-tag btn-large btn-floating teal right"><i class="mdi-content-add"></i></a>
 			</span>
 		</div>
 	</form>
 	{{#if anyTags}}
-	<ul id="tag-collection" class="collection with-header">
-
-		<li class="collection-header"><h4><i class="mdi-image-style left"></i>Tags:</h4></li>
-
+	<ul id="tag-collection" class="collection">
 		{{#each tag}}
 		{{> tagCollectionElement}}
 		{{/each}}
