--- a/client/templates/modals/backdateTaskModal.html
+++ b/client/templates/modals/backdateTaskModal.html
@@ -11,5 +11,5 @@
 
 <template name="backdateTaskModalFooter">
 	<a href="#" class="close-modal waves-effect waves-red btn-flat left">Cancel</a>
-	<a href="#" class="backdate-task waves-effect waves-green btn-flat right">Backdate Task</a>
+	<a href="#" class="submit-backdate-task waves-effect waves-green btn-flat right">Backdate Task</a>
 </template>
