--- a/client/templates/base/navbar.html
+++ b/client/templates/base/navbar.html
@@ -7,14 +7,13 @@
 
 
 				{{#if currentUser}}
-				<li class="{{activeRoute 'index'}}"><a href="{{pathFor route='index'}}">Home<i class="mdi-action-home right"></i></a></li>
-				<li class="{{activeRoute 'tasks'}}{{activeRoute 'task'}}"><a href="{{pathFor 'tasks'}}">Tasks<i class="mdi-action-assignment right"></i></a></li>
-				<li class="{{activeRoute 'settings'}}"><a href="{{pathFor route='settings'}}">Settings<i class="mdi-action-settings right"></i></a></li>
-				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
-				<li><a href="#" class="logout">Logout<i class="mdi-action-exit-to-app right"></i></a></li>
+				<li class="{{activeRoute 'index'}}"><a href="{{pathFor route='index'}}"><i class="mdi-action-home"></i></a></li>
+				<li class="{{activeRoute 'tasks'}}{{activeRoute 'task'}}"><a href="{{pathFor 'tasks'}}"><i class="mdi-action-assignment"></i></a></li>
+				<li class="{{activeRoute 'settings'}}"><a href="{{pathFor route='settings'}}"><i class="mdi-action-settings"></i></a></li>
+				<li><a href="#" class="logout"><i class="mdi-action-exit-to-app"></i></a></li>
 				{{else}}
 				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
-				<li class="{{activeRoute 'login'}}"><a href="{{pathFor route='login'}}">Login<i class="mdi-action-input right"></i></a></li>
+				<li class="{{activeRoute 'login'}}"><a href="{{pathFor route='login'}}">Login<i class="mdi-social-person right"></i></a></li>
 				{{/if}}
 			</ul>
 
@@ -23,7 +22,6 @@
 				<li class="{{activeRoute 'index'}}"><a href="{{pathFor route='index'}}">Home<i class="mdi-action-home right"></i></a></li>
 				<li class="{{activeRoute 'tasks'}}{{activeRoute 'task'}}"><a href="{{pathFor 'tasks'}}">Tasks<i class="mdi-action-assignment right"></i></a></li>
 				<li class="{{activeRoute 'settings'}}"><a href="{{pathFor route='settings'}}">Settings<i class="mdi-action-settings right"></i></a></li>
-				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
 				<li><a href="#" class="logout">Logout<i class="mdi-action-exit-to-app right"></i></a></li>
 				{{else}}
 				<li class="{{activeRoute 'about'}}"><a href="{{pathFor route='about'}}">About<i class="mdi-action-speaker-notes right"></i></a></li>
