yet another big un

--- a/client/templates/index/calendar.html
+++ b/client/templates/index/calendar.html
@@ -1,7 +1,11 @@
 <template name="calendar">
+<div id="index-calendar-wrapper">
+	<div id="index-calendar">
 	{{> calendarArrows}}
 	{{> ReactiveFullcalendar options=calendarOptions}}
 	{{> calendarViewControl}}
+	</div>
+</div>
 </template>
 
 <template name="calendarArrows">
