--- a/client/templates/tasks/tasks.html
+++ b/client/templates/tasks/tasks.html
@@ -5,7 +5,7 @@
 		<li class="collection-header">
 			<h4>
 				<i class="mdi-action-assignment left"></i>
-				Tasks: 
+				Your Tasks 
 				<a href="#" class="filter-tasks black-text"><i class="mdi-content-filter-list right"></i></a>
 			</h4>
 		</li>
