--- a/client/templates/groups/groups.html
+++ b/client/templates/groups/groups.html
@@ -11,11 +11,12 @@
 
 <template name="groupList">
 
-	<ul id="task-collection" class="collection">
+	<ul id="task-collection" class="collection with-header">
+		<li class="collection-header"><h4><i class="mdi-social-group left"></i>Your Groups</h4></li>
 		{{#each group}}
 		<li class="collection-item">
 			<a href="{{pathFor 'group'}}" class="black-text">{{name}} <i class="mdi-action-launch"></i></a>
-			<a href="#" class="edit-group black-text right"><i class="mdi-content-create small"></i></a>
+			<a href="#" class="leave-group black-text right"><i class="mdi-content-clear small"></i></a>
 		</li>
 		{{/each}}
 	</ul>
@@ -28,6 +29,18 @@
 	<div class="row">
 		<div class="col s12 m6 offset-m3">
 			<div class="card-panel">
+				<div id="join-header">
+					<strong>Join Group:</strong> 
+					<div class="right">
+						or <a href="#" id="swap-to-create">create</a>
+					</div>
+				</div>
+				<div id="create-header" class="hidden">
+					<strong>Create Group:</strong>
+					<div class="right">
+						or <a href="#" id="swap-to-join">join</a>
+					</div>
+				</div>
 				<form id="group-form">
 					<div class="input-field">
 						<input id="group-name" name="groupName" type="text">
@@ -42,14 +55,14 @@
 						<label for="group-pass-pass-configm">Confirm password</label>
 					</div>
 				</form>
-<div class="row">
-				<div id="join-control" class="right">
-					<button id="join-group" class="btn">Join</button> <a href="#" id="swap-to-create">or create.</a>
+				<div class="row">
+					<div id="join-control">
+						<button id="join-group" class="btn right">Join</button>
+					</div>
+					<div id="create-control" class="hidden">
+						<button id="create-group" class="btn right">Create</button>
+					</div>
 				</div>
-				<div id="create-control" class="right hidden">
-					<button id="create-group" class="btn">Create</button> <a href="#" id="swap-to-join">or join.</a>
-				</div>
-</div>
 			</div>
 		</div>
 	</div>
