--- a/client/templates/modals/completeTaskModal.html
+++ b/client/templates/modals/completeTaskModal.html
@@ -2,9 +2,12 @@
 		<a href="#" class="backdate-task-show black-text right"><i class="mdi-action-event small"></i></a>
 		<a href="#" class="backdate-task-hide black-text right hidden"><i class="mdi-content-remove small"></i></a>
 	<div class="row centered">
-		<br>
-		Complete task: '{{name}}'
+		<h4>Complete task:</h4>
 	</div>
+
+	<div class="row centered">
+<a href="#" class="goto-task black-text">{{name}} <i class="mdi-action-launch"></i></a>
+</div>
 
 	<div id="backdate-row" class="row hidden">
 		<div class="col s12 m6 offset-m3 input-field">
@@ -12,6 +15,9 @@
 			<label for="backdate-datepicker">Backdate task:</label>
 		</div>
 	</div>
+</template>
+
+<template name="completeTaskModalFooter">
 	<a href="#" class="close-modal waves-effect waves-red btn-flat left">Cancel</a>
 	<a href="#" class="complete-task waves-effect waves-green btn-flat right">Complete Task</a>
 	<a href="#" class="submit-backdate-task waves-effect waves-green btn-flat right hidden">Backdate Task</a>
