--- a/client/templates/tasks/task.html
+++ b/client/templates/tasks/task.html
@@ -1,37 +1,41 @@
 <template name="task">
 
-	<h4>
-		<a href="#" class="complete-task black-text">
-			{{#if completedToday}}
-			<i class="mdi-action-assignment-turned-in small left"></i>
-			{{else}}
-			<i class="mdi-action-done small left"></i>
-			{{/if}}
-		</a>
-		{{name}}
-		<a href="#" class="backdate-task black-text right"><i class="mdi-action-event small"></i></a>
-	</h4>
+		<h4>
+			<a href="#" class="complete-task black-text">
+				{{#if completedToday}}
+				<i class="mdi-action-assignment-turned-in small left"></i>
+				{{else}}
+				<i class="mdi-action-done small left"></i>
+				{{/if}}
+			</a>
+			{{name}}
+			<a href="#" class="backdate-task black-text right"><i class="mdi-action-event small"></i></a>
+		</h4>
 
 
 
 	<div class="row">
 		<div class="col s12 m6">
-		{{#if description}}
-			<p><strong>Tag:</strong> {{tagById}}</p>
-			<p><strong>Description:</strong></p>
-			<p>{{description}}</p>
-
-		{{/if}}
+			<div class="card-panel">
+				<p><strong>Tag:</strong> {{tagById}}</p>
+				{{#if description}}
+				<p><strong>Description:</strong></p>
+				<p>{{description}}</p>
+				{{/if}}
+			</div>
 		</div>
 		<div class="col s12 m6">
-			<p><strong>Duration:</strong> {{duration}} minutes</p>
-			{{#if dueData}}
-			<p><strong>Due:</strong> {{dueNextFormatted}}</p>
-			<p><strong>Due every:</strong> {{dueEveryFormatted}} day{{daysPlural}}</p>
-			{{/if}}
-			<p><strong>Schedule:</strong> {{schedule}}</p>
+			<div class="card-panel">
+				<p><strong>Duration:</strong> {{duration}} minutes</p>
+				{{#if dueData}}
+				<p><strong>Due:</strong> {{dueNextFormatted}}</p>
+				<p><strong>Due every:</strong> {{dueEveryFormatted}} day{{daysPlural}}</p>
+				{{/if}}
+				<p><strong>Schedule:</strong> {{schedule}}</p>
+			</div>
 		</div>
 	</div>
+
 	<div class="row centered">
 		<div class="col s3">
 			<a href="#" class="completed-calendar black-text tooltipped" 
