welcome message formatting and display rules

--- a/client/templates/index/index.html
+++ b/client/templates/index/index.html
@@ -1,7 +1,8 @@
 <template name="index">
 	{{#if needsWelcoming}}
 	{{> welcomeMessage}}
-	{{else}}
+	{{/if}}
+	{{#if anyDue}}
 	{{> calendar}}
 	{{/if}}
 </template>
