--- a/client/templates/groups/group.html
+++ b/client/templates/groups/group.html
@@ -1,3 +1,16 @@
 <template name="group">
-{{name}}
+		<div class="card-panel">
+			<h4><i class="mdi-social-group left"></i>{{group.name}} Members</h4>
+			<ul class="collection">
+			{{#each groupMember}}
+			<li class="collection-item"><i class="mdi-social-person left"></i><a href="{{groupMemberPath}}" class="black-text">{{name}} <i class="mdi-action-launch"></i></a></li>
+			{{/each}}
+			</ul>
+		</div>
+		<div class="card-panel">
+			<h4><i class="mdi-image-style left"></i>{{group.name}} Tags</h4>
+			{{> tags}}
+		</div>
+
+
 </template>
