--- a/client/templates/modals/editTaskModal.html
+++ b/client/templates/modals/editTaskModal.html
@@ -1,17 +1,33 @@
 <template name="editTaskModalBody">
+
 	<form class="edit-task-form">
+
 		<div class="row">
-			<div class="input-field col s12 m6 l4">
-				<input placeholder="Name of new task" name="taskName" id="name" type="text" value="{{name}}">
+			{{#with task}}
+			<div class="input-field col s12 m8">
+				<input placeholder="Name of task" name="taskName" id="name" type="text" value="{{name}}">
 				<label class="active" for="name">Name</label>
 			</div>
-			<div class="input-field col s12 m3 l4">
+			<div class="input-field col s12 m4">
 				<input id="duration" name="taskDuration" type="number" value="{{duration}}">
 				<label for="duration" class="active">Duration (mins)</label>
 			</div>
-			<div class="input-field col s12 m3 l4">
+			{{/with}}
+		</div>
+
+		<div class="row">
+			{{#with task}}
+			<div class="input-field col s6">
+				<select id="group" name="taskGroup" disabled>
+					<option value="{{group}}" selected >{{groupName}}</option>
+				</select>
+				<label>Group:</label>
+
+			</div>
+				{{/with}}
+			<div class="input-field col s6">
 				<select id="tag" name="taskTag" {{disabledWithoutTags}}>
-					<option value="0" {{selectedTag 0}}>Misc.</option>
+					<option value="default" {{selectedTag 0}}>Misc.</option>
 					{{#each tag}}
 					<option value="{{_id}}" {{selectedTag _id}}>{{name}}</option>
 					{{/each}}
@@ -19,7 +35,9 @@
 				<label>Tag as:</label>
 			</div>
 		</div>
+
 		<div class="row">
+{{#with task}}
 			<div class="input-field col s12 m6 l4">
 
 				<p class="col s12">Scheduling:</p>
@@ -53,14 +71,19 @@
 					</div>
 				</div>
 			</div>
+{{/with}}
 		</div>
 		<div class="row">
+{{#with task}}
 			<div class="input-field col s12">
 				<textarea id="description" name="taskDescription" class="materialize-textarea">{{description}}</textarea>
 				<label class="active" for="description">Description</label>
 			</div>
+{{/with}}
 		</div>
+
 	</form>
+
 </template>
 <template name="editTaskModalFooter">
 	<a href="#" class="close-modal waves-effect waves-red btn-flat left">Cancel</a>
