--- a/client/templates/tasks/task.html
+++ b/client/templates/tasks/task.html
@@ -1,5 +1,5 @@
 <template name="task">
-
+{{#with task}}
 		<h4>
 			<a href="#" class="complete-task black-text">
 				{{#if completedToday}}
@@ -17,7 +17,14 @@
 	<div class="row">
 		<div class="col s12 m6">
 			<div class="card-panel">
-				<p><strong>Tag:</strong> {{tagById}}</p>
+				<div class="row">
+					<div class="col s6">
+						<strong>Group:</strong> {{groupById}}
+					</div>
+					<div class="col s6">
+						<strong>Tag:</strong> {{tagById}}
+					</div>
+				</div>
 				{{#if description}}
 				<p><strong>Description:</strong></p>
 				<p>{{description}}</p>
@@ -35,6 +42,7 @@
 			</div>
 		</div>
 	</div>
+{{/with}}
 
 	<div class="row centered">
 		<div class="col s3">
